--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Platzi Challenge #1</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    <title>
-      Frontend Mentor | Huddle landing page with single introductory section
-    </title>
+<body>
+    <div class="container">
+        <header>
+            <img src="/images/logo.svg" alt="">
+        </header>
+        <main>
+            <div class="image">
+                <img src="/images/illustration-mockups.svg" alt="">
+            </div>
+            <div class="content-text">
+                <h1>Build The Community Your Fans Will Love</h1>
+                <p>Huddle re-imagines the way we build communitites. You have a voice, but so does your audience. Create
+                    coonnections with your users as you engange in genuine discussion.</p>
+                <button>Register</button>
+            </div>
+        </main>
+        <footer>
+            <div>
+                <i></i>
+                <i></i>
+                <i></i>
+            </div>
+        </footer>
+    </div>
+</body>
 
-    <!-- No dude en eliminar estos estilos o personalizarlos en su propia hoja de estilo 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-  </head>
-  <body>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
-  </body>
 </html>
