--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Platzi Challenge #1</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/1d51607284.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,10 +28,10 @@
             </div>
         </main>
         <footer>
-            <div>
-                <i></i>
-                <i></i>
-                <i></i>
+            <div class="footer">
+                <i class="fa fa-facebook-f facebook"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-instagram"></i>
             </div>
         </footer>
     </div>
