--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <header>
+        <header class="logo">
             <img src="/images/logo.svg" alt="">
         </header>
         <main>
